docs/generated/2.0-b3/Classnames.md

## API\Request
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## Common
## Config
## DataAccess\LogAggregator
## DataTable
## DataTable\Filter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## Filesystem
## FrontController
## Http
## IP
## Log
## Mail
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuMain
## Menu\MenuTop
## Metrics
## MetricsFormatter
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\Archiver
## Plugin\Controller
## Plugin\Manager
## Plugin\Settings
## Plugin\ViewDataTable
## Plugin\Visualization
## RankingQuery
## ScheduledTask
## ScheduledTime
## ScheduledTime\Daily
## ScheduledTime\Hourly
## ScheduledTime\Monthly
## ScheduledTime\Weekly
## Segment
## SettingsPiwik
## SettingsServer
## Settings\SystemSetting
## Settings\UserSetting
## Singleton
## Site
## TaskScheduler
## Tracker\Request
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Factory
## WidgetsList
